Fix Wistia VSL Integration

--- a/index.html
+++ b/index.html
@@ -6,14 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Página de Vendas - Protocolo Jejum com Café Preto</title>
 
-  <!-- Wistia VSL Styles -->
-  <style>
-    wistia-player[media-id='gc9ywrd50y']:not(:defined) { 
-      background: center / contain no-repeat url('https://fast.wistia.com/embed/medias/gc9ywrd50y/swatch'); 
-      display: block; 
-      padding-top: 100.0%; 
-    }
-  </style>
+  <!-- Wistia Scripts -->
+  <script src="https://fast.wistia.com/embed/medias/gc9ywrd50y.jsonp" async></script>
+  <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
 
   <!-- Meta Pixel 1 -->
   <script>
