Fix only VSL section - keep everything else

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <script src="https://fast.wistia.com/embed/medias/gc9ywrd50y.jsonp" async></script>
   <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
 
+  <!-- Wistia Scripts -->
+  <script src="https://fast.wistia.com/embed/medias/gc9ywrd50y.jsonp" async></script>
+  <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
+
   <!-- Meta Pixel 1 -->
   <script>
     !function(f,b,e,v,n,t,s){
